# TinyAlgo

./: .gitignore  CMakeLists.txt  README.md
CMake/: CMakeMacros.txt
TinyAlgo/: CMakeLists.txt
TinyAlgo/src/List/: TDoublyLinkedList.cpp  TDoublyLinkedList.h  TLinkedList.cpp  TLinkedList.h  TLinkedListNode.cpp  TLinkedListNode.h  TLinkedSkipList.cpp  TLinkedSkipList.h
examples/: CMakeLists.txt
scripts/: SetUpVS2019.bat
